<resources>
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="drawer_menu_item_my_profile">Мой профиль</string>
    <string name="drawer_menu_item_new_groups">Создать группу</string>
    <string name="drawer_menu_item_contacts">Контакты</string>
    <string name="drawer_menu_item_saved_messages">Избранное</string>
    <string name="drawer_menu_item_help">Поддержка</string>
    <string name="drawer_menu_item_settings">Настройки</string>
    <string name="drawer_menu_item_chats">Чаты</string>

    <string name="drawer_menu_first_divider">Группы и контакты</string>
    <string name="drawer_menu_second_divider">Поддержка и настройки</string>
    <string name="change_name_fragment_first_name_field">Введите имя</string>
    <string name="change_name_fragment_last_name_field">Введите Фамилию</string>
    <string name="change_name_fragment_label_text">Изменить имя</string>
    <string name="change_user_name_fragment_username_field">Username</string>
    <string name="change_user_name_fragment_label_text">Изменить логин</string>

</resources>