<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chatsFragment">

    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.example.messenger.ui.main.ChatsFragment"
        android:label="@string/drawer_menu_item_chats"
        tools:layout="@layout/fragment_chats" >
        <action
            android:id="@+id/action_chatsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_chatsFragment_to_helpFragment"
            app:destination="@id/helpFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_chatsFragment_to_savedMessagesFragment"
            app:destination="@id/savedMessagesFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_chatsFragment_to_contactsFragment"
            app:destination="@id/contactsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_chatsFragment_to_myProfileFragment"
            app:destination="@id/myProfileFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_chatsFragment_to_newGroupsFragment"
            app:destination="@id/newGroupsFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.example.messenger.ui.main.ContactsFragment"
        android:label="@string/drawer_menu_item_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.example.messenger.ui.main.HelpFragment"
        android:label="@string/drawer_menu_item_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/savedMessagesFragment"
        android:name="com.example.messenger.ui.main.SavedMessagesFragment"
        android:label="@string/drawer_menu_item_saved_messages"
        tools:layout="@layout/fragment_saved_messages" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.messenger.ui.main.SettingsFragment"
        android:label="@string/drawer_menu_item_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_changeNameFragment"
            app:destination="@id/changeNameFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_changeUserNameFragment"
            app:destination="@id/changeUserNameFragment" />
    </fragment>
    <fragment
        android:id="@+id/myProfileFragment"
        android:name="com.example.messenger.ui.main.MyProfileFragment"
        android:label="@string/drawer_menu_item_my_profile"
        tools:layout="@layout/fragment_my_profile" />
    <fragment
        android:id="@+id/newGroupsFragment"
        android:name="com.example.messenger.ui.main.NewGroupsFragment"
        android:label="@string/drawer_menu_item_new_groups"
        tools:layout="@layout/fragment_new_groups" />
    <fragment
        android:id="@+id/changeNameFragment"
        android:name="com.example.messenger.ui.main.ChangeNameFragment"
        android:label="@string/change_name_fragment_label_text"
        tools:layout="@layout/fragment_change_name" >
        <action
            android:id="@+id/action_changeNameFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/changeUserNameFragment"
        android:name="com.example.messenger.ui.main.ChangeUserNameFragment"
        android:label="@string/change_user_name_fragment_label_text"
        tools:layout="@layout/fragment_change_user_name" >
        <action
            android:id="@+id/action_changeUserNameFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
</navigation>